@@ -1,4 +1,11 @@
-2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Convert S_process to Boot.
+	* src/interp/spad.lisp: delete S_process, add Boot
+	version to:
+	src/interp/ncomp.boot
+
+2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/nlib.lisp: Do not add "NIL" extension
 	to file names.
